add dissertation to notes

--- a/src/notes/Makefile
+++ b/src/notes/Makefile
@@ -1,12 +1,12 @@
 PDFLATEX=pdflatex
 BIBTEX=bibtex
 
-all : notes.pdf
+all : notes.html
 
-
-notes.pdf : notes.tex 
+notes.pdf : notes.tex  
 	$(PDFLATEX) notes.tex
-
+notes.html : notes.tex notes.pdf
+	pandoc -o notes.html notes.tex
 
 clean : 
 	rm -f *.aux *.dvi *.ps *.log  
