--- a/src/talks/Makefile
+++ b/src/talks/Makefile
@@ -1,9 +1,10 @@
 PDFLATEX=pdflatex
 BIBTEX=bibtex
 
-all : talks.pdf
+all : talks.html
 
-
+talks.html : talks.pdf talks.tex
+	pandoc -o talks.html talks.tex
 talks.pdf : talks.tex 
 	$(PDFLATEX) talks.tex
 
