--- a/src/cv/Makefile
+++ b/src/cv/Makefile
@@ -1,12 +1,9 @@
 PDFLATEX=pdflatex
 BIBTEX=bibtex
 
-all : cv.pdf
+all : cv.html
 
-
+cv.html : cv.tex cv.pdf
+	pandoc -o cv.html cv.tex
 cv.pdf : cv.tex 
 	$(PDFLATEX) cv.tex
-
-
-clean : 
-	rm -f *.aux *.dvi *.ps *.log  
